# Squiggly

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  guide.md  run_console.sh  test.sqgly  update_and_run.sh
console_games/: collisionTest.sqgly  colorTest.sqgly  flappy_bird.sqgly  objectTest.sqgly  spots.sqgly
include/: built-in-funcs.hpp  built-in.hpp  external-libs.hpp  frontend.hpp  graphics.hpp  linter.h  linter.hpp  main.hpp  physics.hpp  runner.hpp  screen.hpp  tokenizer.h  tokenizer.hpp  utils.hpp
include/Raspi-Port/: Menu.hpp
lib/Display_Lib_RPI/examples/ili9341/Bitmap_Tests/: main.cpp
lib/Display_Lib_RPI/examples/ili9341/Hello_world/: main.cpp
lib/Display_Lib_RPI/examples/ili9341/Hello_world_SWSPI/: main.cpp
lib/Display_Lib_RPI/examples/ili9341/Mandelbrot_set/: main.cpp
lib/Display_Lib_RPI/examples/ili9341/Text_Graphics_Functions/: main.cpp
lib/Display_Lib_RPI/examples/ili9341/Touch_Screen/: main.cpp
lib/Display_Lib_RPI/examples/nokia5110/BITMAP/: main.cpp
lib/Display_Lib_RPI/examples/nokia5110/HELLOWORLD/: main.cpp
lib/Display_Lib_RPI/examples/nokia5110/TEXT_GRAPHICS_FUNCTIONS/: main.cpp
lib/Display_Lib_RPI/examples/st7735/Bitmap_Tests/: main.cpp
lib/Display_Lib_RPI/examples/st7735/Frame_rate_test_bmp/: main.cpp
lib/Display_Lib_RPI/examples/st7735/Hello_world/: main.cpp
lib/Display_Lib_RPI/include/: color16_graphics_RDL.hpp  common_data_RDL.hpp
lib/Display_Lib_RPI/include/hd44780/: HD44780_LCD_RDL.hpp
lib/Display_Lib_RPI/include/max7219/: MAX7219_7SEG_Font_RDL.hpp  MAX7219_7SEG_RDL.hpp
lib/Display_Lib_RPI/include/nokia5110/: NOKIA_5110_LCD_RDL.hpp
lib/Display_Lib_RPI/include/st7735/: ST7735_TFT_LCD_RDL.hpp
lib/Display_Lib_RPI/include/st7789/: ST7789_TFT_LCD_RDL.hpp
lib/Display_Lib_RPI/src/: color16_graphics_RDL.cpp  font_data_RDL.cpp
lib/Display_Lib_RPI/src/hd44780/: HD44780_LCD_RDL.cpp
lib/Display_Lib_RPI/src/max7219/: MAX7219_7SEG_Font_RDL.cpp  MAX7219_7SEG_RDL.cpp
lib/Display_Lib_RPI/src/nokia5110/: NOKIA_5110_LCD_RDL.cpp
lib/Display_Lib_RPI/src/st7735/: ST7735_TFT_LCD_RDL.cpp
lib/Display_Lib_RPI/src/st7789/: ST7789_TFT_LCD_RDL.cpp
lib/ST7735_TFT_RPI/: .gitignore  README.md
lib/ST7735_TFT_RPI/example/: Makefile
lib/ST7735_TFT_RPI/include/: ST7735_TFT.hpp  ST7735_TFT_graphics.hpp
lib/ST7735_TFT_RPI/src/: ST7735_TFT.cpp  ST7735_TFT_graphics.cpp
lib/exprtk/: Makefile  readme.txt
setup-compiler/: squiggly-setup-compiler.iss
src/: built-in-funcs.cpp  external-libs.cpp  frontend.cpp  graphics.cpp  linter.cpp  main.cpp  physics.cpp  runner.cpp  screen.cpp  squiggly.cpp  tokenizer.cpp  utils.cpp
src/Built-In/: Object.cpp  built-in-funcs.cpp
src/Raspi-Port/: Menu.cpp
test_scripts/: arraysTest.sqgly  benchMarkTest.sqgly  booleanTest.sqgly  branchTest.sqgly  collisionHandlingTest.sqgly  collisionTest.sqgly  colorTest.sqgly  graphicsTest.sqgly  inputTest.sqgly  inputTset.sqgly  loopTest.sqgly  objectArrayTest.sqgly  objectTest.sqgly  printTest.sqgly  randomTest.sqgly  sqgly_template.sqgly  syntax.md  test.sqgly  tmp.sqgly
vscode_language/: CHANGELOG.md  README.md  language-configuration.json  package.json
vscode_language/syntaxes/: sqgly.tmLanguage.json
(+21 files in other folders)
